refactor: replace redundant variable declarations and streamline list collection methods